SERVER-33956 renameCollection creates oplog entry with dropTarget set to false if target collection does not exist

(cherry picked from commit 0d02b8352e3f44385276fb2bbc6f5c09736afa04)